--- a/Flagrum.Web/Features/ModManager/Index.razor
+++ b/Flagrum.Web/Features/ModManager/Index.razor
@@ -88,7 +88,7 @@
                             mod.IsApplyToGame = binmodListing.IsEnabled;
                             mod.Path = file;
                             mod.PreviewBytes = previewBytes;
-                            File.WriteAllBytes($"{IOHelper.GetExecutingDirectory()}\\wwwroot\\images\\{mod.Uuid}.png", previewBytes);
+                            File.WriteAllBytes($"{IOHelper.GetWebRoot()}\\images\\{mod.Uuid}.png", previewBytes);
 
     // TODO: Get tags from a file
                             mod.Tags = new List<string>();
