--- a/Flagrum.Desktop/MainWindow.xaml
+++ b/Flagrum.Desktop/MainWindow.xaml
@@ -35,7 +35,7 @@
                             <ColumnDefinition Width="50" />
                             <ColumnDefinition Width="50" />
                         </Grid.ColumnDefinitions>
-                        <Image Source="/flagrumHeader.png" Grid.Column="0" Margin="15, 0, 0, 0" />
+                        <Image Source="/Resources/flagrum-titlebar.png" Grid.Column="0" Margin="15, 0, 0, 0" />
                         <Label Grid.Column="1" Content="Flagrum" Foreground="#E7E5E4" FontSize="14"
                                VerticalAlignment="Center"
                                Padding="10, 5, 15, 8" />
