Tidying, refactoring, etc

--- a/Flagrum.Web/Features/FileInspector/Index.razor
+++ b/Flagrum.Web/Features/FileInspector/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/inspector"
-@using Flagrum.Gfxbin.Gmdl
 @using System.IO
-@using Flagrum.Gfxbin.Gmtl
+@using Flagrum.Core.Gfxbin.Gmdl
+@using Flagrum.Core.Gfxbin.Gmtl
 @inject IWpfService Wpf
 
 <div class="p-6">
