--- a/Flagrum.Web/Features/ModManager/Configure.razor
+++ b/Flagrum.Web/Features/ModManager/Configure.razor
@@ -1,9 +1,9 @@
 ﻿@page "/mod/configure"
-@using Flagrum.Core.Archive
 @using Flagrum.Core.Utilities
-@using Flagrum.Gfxbin.Btex
 @using Flagrum.Web.Components.Controls.Data
+@using Flagrum.Core.Archive
 @using System.IO
+@using Flagrum.Core.Gfxbin.Btex
 
 @inject NavigationManager Navigation
 @inject JSInterop Interop
