--- a/Flagrum.Web/Layout/TypeTreeComponent.razor
+++ b/Flagrum.Web/Layout/TypeTreeComponent.razor
@@ -1,6 +1,7 @@
 ﻿@using SQEX.Ebony.Framework.Sequence.Tray
 @using Flagrum.Web.Components
 @using Blazor.Diagrams.Core.Geometry
+@using Flagrum.Web.Components.Graph
 @if (TypeTree.IsVisible)
 {
     <div class="flex flex-row cursor-pointer hover:bg-grey-800 items-center text-grey-300" style="padding-left: @(Indentation)px" @onclick="OnClick">
