--- a/Flagrum.Web/Layout/MainMenu.razor
+++ b/Flagrum.Web/Layout/MainMenu.razor
@@ -3,6 +3,7 @@
         <MenuItem Icon="apps" Text="Mod Library" DefaultActive="true" Uri="/"/>
         <MenuItem Icon="videogame_asset" Text="Asset Explorer" Uri="/assets"/>
         <MenuItem Icon="search" Text="File Inspector" Uri="/inspector"/>
+        <MenuItem Icon="share" Text="Sequence Editor" Uri="/sequenceeditor"></MenuItem>
         <div class="flex-grow"></div>
         <MenuItem Icon="menu_book" Text="Tutorials" Uri="/tutorials"></MenuItem>
         <MenuItem Icon="settings" Text="Settings" Uri="/settings"></MenuItem>
