Fixes for texture naming conventions, duplicate default textures, binmod list item IDs, etc

--- a/Flagrum.Web/Features/ModLibrary/Index.razor
+++ b/Flagrum.Web/Features/ModLibrary/Index.razor
@@ -103,6 +103,9 @@
                         Logger.LogError(e, e.Message);
                     }
                 }
+                
+                var paths = AppState.Mods.Select(m => m.Path);
+                AppState.UnmanagedEntries = binmodList.Where(e => !paths.Contains(e.Path)).ToList();
             });
 
             AppState.IsModListInitialized = true;
