--- a/Flagrum.Web/Features/ModLibrary/Index.razor
+++ b/Flagrum.Web/Features/ModLibrary/Index.razor
@@ -2,6 +2,7 @@
 @using Flagrum.Core.Archive
 @using Flagrum.Core.Utilities
 @using System.IO
+@using Flagrum.Core.Archive.Binmod
 
 @inject NavigationManager Navigation
 @inject Settings Settings
