--- a/Flagrum.Web/Features/ModLibrary/Upload.razor
+++ b/Flagrum.Web/Features/ModLibrary/Upload.razor
@@ -1,5 +1,6 @@
 ﻿@page "/mod/upload"
 @using Flagrum.Core.Archive
+@using Flagrum.Core.Archive.Binmod
 @inject SteamWorkshopService SteamWorkshop
 @inject AppStateService AppState
 @inject NavigationManager Navigation
