--- a/Flagrum.Web/Features/ModLibrary/Configure.razor
+++ b/Flagrum.Web/Features/ModLibrary/Configure.razor
@@ -5,7 +5,12 @@
 @using Flagrum.Core.Archive.Binmod
 @using Flagrum.Core.Gfxbin.Btex
 @using System.IO
+@using System.IO.Compression
+@using System.Text
 @using Flagrum.Core.Archive
+@using Flagrum.Core.Gfxbin.Gmdl
+@using Flagrum.Core.Gfxbin.Gmdl.Constructs
+@using Newtonsoft.Json
 
 @inject NavigationManager Navigation
 @inject JSInterop Interop
